--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "typescript": "^5.6.2"
   }
 }
