--- a/package.json
+++ b/package.json
@@ -28,10 +28,17 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
     "howler": "^2.2.4",
+    "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.7.0",
+    "nodemailer": "^6.9.15",
     "pug": "^3.0.3",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
